kubernetes/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio
spec:
  selector:
    app: minio
  ports:
  - port: 9000
    targetPort: 9000
    name: minio-api
  - port: 9001
    targetPort: 9001
    name: minio-dashboard
  type: ClusterIP
