kubernetes/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    external-dns.alpha.kubernetes.io/hostname: |
      minio.homelab.jonasg.be
      minio-console.homelab.jonasg.be
spec:
  tls:
  - hosts:
      - minio.homelab.jonasg.be
      - minio-console.homelab.jonasg.be
    secretName: minio-tls
  rules:
  - host: minio.homelab.jonasg.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9000
  - host: minio-console.homelab.jonasg.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9001
